--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -40,3 +40,15 @@ select option:checked {
 i.bx.bx-loader-alt.bx-spin::before {
   font-size: 24px;
 }
+
+/* @keyframes spin {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+
+  100% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+} */
